--- a/style2.css
+++ b/style2.css
@@ -21,7 +21,7 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 #content{
    float: right;
-    height: 314.6px;
+    height: 316px;
     width: 1165px;
     text-align: justify;
     background-color: greenyellow;
@@ -32,8 +32,8 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-left: 5px;
   }
 #side-bar{
-    width: 95px;
-    height:304.6px ;
+    width: 100px;
+    height:306px ;
     background: turquoise;
     position: absolute;
     left: 8;
@@ -43,8 +43,7 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    #side-bar a{
     color: black;
     text-decoration: none;
-    padding-left: 10px;
-  }
+    padding-left: 10px;}
     
 #footer{
     background-color: orange;
